merge Feat/collection points crud (#44)
* feat: implement collection points management for COLETOR users

- Add CRUD endpoints for collection points (POST, GET, DELETE)
- Implement field validation with custom error messages
- Add material ID validation against database
- Secure endpoints with @PreAuthorize(COLETOR only)
- Add global exception handler for error responses
- Fix authorization bug: change .roles() to .authorities()
- Add 6 unit and integration tests
- Enable method-level security in SecurityConfig

* feat: add edit endpoint for collection points

- Add PUT /pontos/{id} endpoint for COLETOR users
- Add editarPontoColeta method in service with authorization validation
- Integrate search functionality from main branch (PontoColetaSpecs)

* feat: cria DTO's para descarte de material

* feat: implementa sistema de solicitação de descarte

Adiciona endpoints para geradores criarem solicitações de descarte
e visualizarem histórico, com validação de compatibilidade entre
material e ponto de coleta

* feat: refactor Descarte DTOs and service methods for improved clarity and functionality

* feat: enhance security with role-based access control
- Enable @EnableMethodSecurity in SecurityConfig
- Add @PreAuthorize("hasRole('GERADOR')") to DescarteController
- Update UserDetailsServiceImpl to map roles correctly

* feat: implement collection points search by name and id

* fix: allow COLETOR role to access points endpoint

* feat: Cria endpoint para retornar a lista de todos os materiais presentes no banco

* fix: resolve compilation errors and update swagger dependency

* fiz: change route name

---------

Co-authored-by: Augusto Rodrigues <augusto06r@gmail.com>
Co-authored-by: guigs <guidentzien@hotmail.com>